--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <div id='graphic'>
     <div id='sections'>
       <section class="step">
-        <div class="title">OpenVis Conf 2013</div>
+        <div class="title">Food for Thought</div>
         I did what no presenter should ever do: I watched my own talk.<br/><br/>My first visit to OpenVis Conf in 2013.
       </section>
       <section class="step">
-        <div class="title">Filler Words</div>
+        <div class="title">Food Security</div>
         As expected, I could only focus on the flaws: the rushed speech, the odd phrases, and, most especially, all the filler words. In fact, I found 180 filler words in my 30 minute talk.
       </section>
       <section class="step">
-        <div class="title">My Talk</div>
+        <div class="title">Food Security in the United States of America</div>
         Here are all 5,040 words of my talk.
       </section>
       <section class="step">
-        <div class="title">My Stumbles</div>
+        <div class="title">Food Security in New Jersey</div>
         And here are all the fillers I used in those 30 minutes.
       </section>
       <section class="step">
-        <div class="title">Um's, Ah's &amp; Uh's</div>
+        <div class="title">Food Security in Newark</div>
         I almost exclusively used these three fillers. Um's and Ah's made up over 80%, with Uh's trailing behind.
       </section>
       <section class="step">
@@ -42,7 +42,7 @@
         My theory is that at this critical halfway point in my talk, I heard a dry cough indicative of the audience's waning interest. This caused self-confidence to collapse and forced me out of my groove.<br/><br/>A competing theory is that I just hadn't practiced the last half of my speech as much.
       </section>
       <section class="step">
-        <div class="title">Best of Luck to Me in 2015</div>
+        <div class="title">Our Current Assets</div>
         The world may never know, or care, but hopefully these insights improve my speaking in 2015. Though preliminary results aren't looking so good.
       </section>
     </div>
