--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         I almost exclusively used these three fillers. Um's and Ah's made up over 80%, with Uh's trailing behind.
       </section>
       <section class="step">
-        <div class="title">Fillers Over Time</div>
+        <div class="title">Places to Purchase Healthy Food in Newark</div>
         I hoped that all these blunders were toward the beginning of my talk. And the data suggests that fewer fillers are used as I get into it. Perhaps the talk started out rough and improved as I found my groove.
       </section>
       <section class="step">
-        <div class="title">Ramping Back Up</div>
+        <div class="title">Community Farms in Newark</div>
         Unfortunately, the trend does not continue. Midway into the talk my Um's and Ah's spike. I continue to use them pretty consistently throughout the rest of the talk.
       </section>
       <section class="step">
-        <div class="title">The Cough Effect</div>
+        <div class="title">Our Partners </div>
         My theory is that at this critical halfway point in my talk, I heard a dry cough indicative of the audience's waning interest. This caused self-confidence to collapse and forced me out of my groove.<br/><br/>A competing theory is that I just hadn't practiced the last half of my speech as much.
       </section>
       <section class="step">
-        <div class="title">Our Current Assets</div>
+        <div class="title">Our Call to Action</div>
         The world may never know, or care, but hopefully these insights improve my speaking in 2015. Though preliminary results aren't looking so good.
       </section>
     </div>
