--- a/foodsecurity.html
+++ b/foodsecurity.html
@@ -3,6 +3,5 @@
   <body>
   <h1>Grocery Stores in Newark</h1>
     
-   <iframe width="100%" height="520" frameborder="0" src="https://jeralynpowell.carto.com/builder/fc17c485-93b1-4e29-a46f-ed03372baef1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-  </body>
+<iframe width="100%" height="520" frameborder="0" src="https://jeralynpowell.carto.com/builder/fc17c485-93b1-4e29-a46f-ed03372baef1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  </body>
     </html>
