--- a/index.html
+++ b/index.html
@@ -19,24 +19,38 @@
       </section>
       <section class="step">
         <div class="title">Food Security in the United States of America</div>
-        Here are all 5,040 words of my talk.
+      There are 41.2 million people who live in food-insecure households.
+      </section> 
+      <section class="step">
+        <div class="title">Food Security in New Jersey</div>
+      There are over 1,151,890 people live in food-insecure households in New Jersey.  This equates to almost 1 in 8 households – many with children.
+<br> Source: Map the Meal Gap, Feeding America and Community Food Bank of New Jersey, 2014
       </section>
       <section class="step">
         <div class="title">Food Security in New Jersey</div>
-        And here are all the fillers I used in those 30 minutes.
+    The Poverty Research Institute reported that one out of every five New Jersey families does not earn enough to afford basic necessities such as food, housing, and child care
+    <br> Source: Poverty Research Institute, 2011
       </section>
+      <section class="step">
+        <div class="title">Food Security in New Jersey</div>
+      In 2014, 77 percent of emergency food clients in New Jersey reported having to choose between paying for food and paying for utilities or heating fuel; 70 percent had to choose between paying for food and paying their rent or mortgage; and 73 percent had to choose between paying for food and paying for medicine or medical care.
+      </section>
+      <section class="step">
+        <div class="title">Food Security in New Jersey</div>
+    A 4 person family with 2 adult(s) and 2 children, age(s) 8,12, living in Essex County needed at least $55,106 to meet the basic needs in 2011 and $57,770 in 2014 (adjusted for inflation).      
+      </section>
+      
       <section class="step">
         <div class="title">Food Security in Newark</div>
-        I almost exclusively used these three fillers. Um's and Ah's made up over 80%, with Uh's trailing behind.
-      </section>
+        Over 145,000 homes in Essex County accounted for the highest level of food insecurity in the state.      </section>
       <section class="step">
-        <div class="title">Places to Purchase Healthy Food in Newark</div>
-        I hoped that all these blunders were toward the beginning of my talk. And the data suggests that fewer fillers are used as I get into it. Perhaps the talk started out rough and improved as I found my groove.
+        <div class="title">Grocery Stores in Newark</div>
+        Although there are several factors that contribute to a person being food insecure, one is access to healthy food options and grocery stores. Here's a list of grocery stores in and near Newark.  
       </section>
       <section class="step">
         <div class="title">Community Farms in Newark</div>
-        Unfortunately, the trend does not continue. Midway into the talk my Um's and Ah's spike. I continue to use them pretty consistently throughout the rest of the talk.
-      </section>
+        
+    </section>
       <section class="step">
         <div class="title">Our Partners </div>
         My theory is that at this critical halfway point in my talk, I heard a dry cough indicative of the audience's waning interest. This caused self-confidence to collapse and forced me out of my groove.<br/><br/>A competing theory is that I just hadn't practiced the last half of my speech as much.
