--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </section>
       <section class="step">
         <div class="title">Food Security in the United States of America</div>
-      There are 41.2 million people who live in food-insecure households.
+      There are 41.2 million people in the US who live in food-insecure households.
       </section> 
       <section class="step">
         <div class="title">Food Security in New Jersey</div>
-      There are over 1,151,890 people live in food-insecure households in New Jersey.  This equates to almost 1 in 8 households – many with children.
+      Over 1,151,890 million of them are here in New Jersey.  This equates to almost 1 in 8 households – many with children.
 <br> Source: Map the Meal Gap, Feeding America and Community Food Bank of New Jersey, 2014
       </section>
       <section class="step">
@@ -33,16 +33,19 @@
       </section>
       <section class="step">
         <div class="title">Food Security in New Jersey</div>
-      In 2014, 77 percent of emergency food clients in New Jersey reported having to choose between paying for food and paying for utilities or heating fuel; 70 percent had to choose between paying for food and paying their rent or mortgage; and 73 percent had to choose between paying for food and paying for medicine or medical care.
+      In 2014, 77 percent of emergency food clients in New Jersey reported having to choose between paying for food and paying for utilities or heating fuel
+        <br>70 percent had to choose between paying for food and paying their rent or mortgage.
+        <br>73 percent had to choose between paying for food and paying for medicine or medical care.
       </section>
       <section class="step">
         <div class="title">Food Security in New Jersey</div>
-    A 4 person family with 2 adult(s) and 2 children, age(s) 8,12, living in Essex County needed at least $55,106 to meet the basic needs in 2011 and $57,770 in 2014 (adjusted for inflation).      
-      </section>
+    A 4 person family with 2 adults and 2 children living in Essex County needed at least $55,106 to meet the basic needs in 2011 and $57,770 in 2014.      
+Accounting for the highest level of food insecurity in the state, there are over 145,000 families in Essex County alone.       </section>
       
       <section class="step">
         <div class="title">Food Security in Newark</div>
-        Over 145,000 homes in Essex County accounted for the highest level of food insecurity in the state.      </section>
+       A meal in Essex County costs 75 cents more than the state average.       
+      </section>
       <section class="step">
         <div class="title">Grocery Stores in Newark</div>
         Although there are several factors that contribute to a person being food insecure, one is access to healthy food options and grocery stores. Here's a list of grocery stores in and near Newark.  
