--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       </section>
       <section class="step">
         <div class="title">What is Food Security?</div>
-        As expected, I could only focus on the flaws: the rushed speech, the odd phrases, and, most especially, all the filler words. In fact, I found 180 filler words in my 30 minute talk.
-      </section>
+Food security for a household means that all members at all times have access to enough food for an active, healthy life. 
+       <br>
+       <br>
+        Food insecurity includes the limited or uncertain availability of nutritionally adequate and safe foods or limited or uncertain ability to get acceptable foods in socially acceptable ways (that is, without resorting to emergency food supplies, scavenging, stealing, or other coping strategies)      </section>
       <section class="step">
         <div class="title">Food Security in the United States of America</div>
       There are 41.2 million people in the US who live in food-insecure households.
