--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 Food security for a household means that all members at all times have access to enough food for an active, healthy life. 
        <br>
        <br>
-        Food insecurity includes the limited or uncertain availability of nutritionally adequate and safe foods or limited or uncertain ability to get acceptable foods in socially acceptable ways (that is, without resorting to emergency food supplies, scavenging, stealing, or other coping strategies)      </section>
+        When a household is considered food insecure, they have worried whether their food would run out before they got money to buy more, the food they bought didn't last and they didn't have money to get more, or they couldn't afford to eat balanced meals.
+        
+        By definition, food insecurity includes the limited or uncertain availability of nutritionally adequate and safe foods or limited or uncertain ability to get acceptable foods in socially acceptable ways (that is, without resorting to emergency food supplies, scavenging, stealing, or other coping strategies)      </section>
       <section class="step">
         <div class="title">Food Security in the United States of America</div>
       There are 41.2 million people in the US who live in food-insecure households.
