--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <section class="step">
         <div class="title">What is Food Security?</div>
 Food security for a household means that all members at all times have access to enough food for an active, healthy life. 
-       <br>
-       <br>
+       <br/>
+       <br/>
         When a household is considered food insecure, they have worried whether their food would run out before they got money to buy more, the food they bought didn't last and they didn't have money to get more, or they couldn't afford to eat balanced meals.
-        
+        <br/>
+        <br/> 
         By definition, food insecurity includes the limited or uncertain availability of nutritionally adequate and safe foods or limited or uncertain ability to get acceptable foods in socially acceptable ways (that is, without resorting to emergency food supplies, scavenging, stealing, or other coping strategies)      </section>
       <section class="step">
         <div class="title">Food Security in the United States of America</div>
@@ -28,7 +29,9 @@ Food security for a household means that all members at all times have access to
       <section class="step">
         <div class="title">Food Security in New Jersey</div>
         Over 1,151,890 million of them are here in New Jersey.  
-        <br> This equates to almost 1 in 8 households – many with children.
+        <br/> 
+        <br/>
+        This equates to almost 1 in 8 households – many with children.
 <br> Source: Map the Meal Gap, Feeding America and Community Food Bank of New Jersey, 2014
       </section>
       <section class="step">
@@ -38,8 +41,6 @@ Food security for a household means that all members at all times have access to
       <section class="step">
         <div class="title"> </div>
       In 2014, 77 percent of emergency food clients in New Jersey reported having to choose between paying for food and paying for utilities or heating fuel.
-        <br>70 percent had to choose between paying for food and paying their rent or mortgage.
-        <br>73 percent had to choose between paying for food and paying for medicine or medical care.
       </section>
      
       <section class="step">
