--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div id='sections'>
       <section class="step">
         <div class="title">Here's Some Food for Thought</div>
-        I did what no presenter should ever do: I watched my own talk.<br/><br/>My first visit to OpenVis Conf in 2013.
-      </section>
+America throws away an estimated 40% of its food, while one in nine people goes to bed hungry every night.      </section>
       <section class="step">
         <div class="title">What is Food Security?</div>
 Food security for a household means that all members at all times have access to enough food for an active, healthy life. 
