--- a/foodsecurity.html
+++ b/foodsecurity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-  <h1>Grocery Stores in Newark</h1>
+  <h1>Food Resources in Newark by Ward</h1>
     
-<iframe width="100%" height="520" frameborder="0" src="https://jeralynpowell.carto.com/builder/fc17c485-93b1-4e29-a46f-ed03372baef1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  </body>
+<iframe width="100%" height="520" frameborder="0" src="https://jeralynpowell.carto.com/builder/fc17c485-93b1-4e29-a46f-ed03372baef1/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>   
     </html>
